--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
+    "firebase-functions": "^5.0.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "nodemailer": "^6.9.14",
