--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,13 @@
 {
   "functions": [
     {
-      "source": "src",
+      "source": "dist",
       "codebase": "default",
       "ignore": [
         "node_modules",
         ".git",
         "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
+        "firebase-debug.*.log"
       ],
       "predeploy": [
         "npm --prefix \"$RESOURCE_DIR\" run lint",
